# py-wwpdb_utils_align

./: .gitignore  BUILD.sh  CMakeLists.txt  HISTORY.txt  MANIFEST.in  README.md  azure-pipelines.yml  azure-template-build.yml  azure-template-publish-job.yml  azure-template-tox-job.yml  pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
modules/PairwiseAlign/include/: AlignUtil.h  PairwiseAlign.h  PseudoMultiAlign.h  TestSequenceData.h
modules/PairwiseAlign/src/: AlignUtil.C  PairwiseAlign.C  PseudoMultiAlign.C
modules/PairwiseAlign/test/: testPairwiseAlign.C  testPairwiseAlignZF.C  testPseudoMultiAlign.C  testRefSeqAlign.C
modules/cpp-alignlib-wrapper/: GenerateWrapper.sh  alignlib.cfg
modules/cpp-alignlib-wrapper/src/: PairwiseAlign.h.json  PseudoMultiAlign.h.json  wrapPairwiseAlign.cpp  wrapPseudoMultiAlign.cpp  wrapalignlib.cpp
wwpdb/utils/align/: SequenceExamples.py  SequenceReferenceData.py  __init__.py  alignlib.pyi
wwpdb/utils/tests-align/: PairwiseAlignTests.py  PseudoMultiAlignTests.py  testPseudoMultiAlign.py
